Styling tweaks for mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,3 +11,11 @@
 footer {
     padding-bottom: 2rem;
 }
+
+@media only screen and (max-width: 768px) {
+    .button {
+        height: auto;
+        max-width: 100%;
+        white-space: normal;
+    }
+}
