Additional responsive/mobile tweaks

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,7 @@ footer {
     .button {
         height: auto;
         max-width: 100%;
+        flex-wrap: wrap;
         white-space: normal;
     }
 }
